hello: Fix a header alignment issue when page is around 375px.
Fixes: #10771

This commit fixes the alignment of the header inside integration section
when page is around 375px of width.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -4050,6 +4050,10 @@ nav ul li.active::after {
         padding: 0 45px 0 45px;
     }
 
+    .portico-landing.hello .integrations .content header {
+        padding: 0;
+    }
+
     .portico-landing.hello .integrations .integration-icons .group {
         margin: 4px 2px;
     }
